--- a/NotIMDB/app/views/movies/index.html.erb
+++ b/NotIMDB/app/views/movies/index.html.erb
@@ -3,15 +3,15 @@
 <body>
   <div class="container">
       
+	  <%= form_tag(movies_path, :method => "get") do %>
 	<div id="container">
 		<h1>All Movies</h1>
 		<div class="navbar-form" style="text-align:center">
-			<%= form_tag(movies_path, :method => "get") do %>
 				<%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control", :search => params[:search] %>
 				<%= submit_tag "Search", class: 'btn btn-default' %>
-			<% end %> 
+				<%= link_to "Clear", :type => "reset" %>
 		</div>
-		<%= form_tag(movies_path, :method => "get", id: "search-form") do %>
+		
 		<div class="row">
 			<div class="col-sm-6">
 				<div>
