--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -13,7 +13,7 @@
 
 	<div class="row">
 			<div class="col-md-4">
-				<img src= <%= @movie.picture_link %> />
+				<img src= "" />
 			</div>
 			<div class="col-md-8">
 			<p><%= @movie.description %></p>
@@ -30,6 +30,34 @@
   <strong>Rating:</strong>
   <%= @movie.rating %>
 </p>
+
+<h2>Comments</h2>
+<% @movie.comments.each do |comment| %>
+  <p>
+    <b>Commenter:</b>
+    <%= comment.commenter %>
+  </p>
+ 
+  <p>
+    <b>Comment:</b>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@movie, @movie.comments.build]) do |f| %>
+  <div class="field">
+    <%= f.label :commenter %><br />
+    <%= f.text_field :commenter %>
+  </div>
+  <div class="field">
+    <%= f.label :body %><br />
+    <%= f.text_area :body %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 
 </div>
 
